added path animation

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
             </g>
           </g>
           <g id="animated-green-elements">
-            <g id="item3" style="--order: 3">
+            <g id="3">
               <circle id="Ellipse 3" cx="96" cy="323" r="5" fill="#68C847" />
               <g id="Group_6">
                 <path
@@ -593,7 +593,7 @@
                 />
               </g>
             </g>
-            <g id="item4" style="--order: 4">
+            <g id="4">
               <circle id="Ellipse 3_2" cx="186" cy="323" r="5" fill="#68C847" />
               <g id="Group_7">
                 <path
@@ -605,7 +605,7 @@
                 />
               </g>
             </g>
-            <g id="item2" style="--order: 2">
+            <g id="2">
               <circle id="Ellipse 3_3" cx="186" cy="224" r="5" fill="#68C847" />
               <g id="Group_8">
                 <path
@@ -617,7 +617,7 @@
                 />
               </g>
             </g>
-            <g id="item1" style="--order: 1">
+            <g id="1">
               <circle id="Ellipse 3_4" cx="95" cy="224" r="5" fill="#68C847" />
               <g id="Group_9">
                 <path
@@ -650,6 +650,11 @@
               </g>
             </g>
           </g>
+          <path
+            id="path-1"
+            d="M39 159.506H99C100.657 159.506 102 160.849 102 162.506V199C102 200.657 100.657 202 99 202H42C40.3431 202 39 200.657 39 199V159"
+            stroke="#68C847"
+          />
         </g>
         <defs>
           <filter
@@ -666,6 +671,7 @@
               in="SourceAlpha"
               type="matrix"
               values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+              result="hardAlpha"
             />
             <feOffset />
             <feGaussianBlur stdDeviation="2" />
@@ -688,5 +694,6 @@
         </defs>
       </svg>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
